# tts-mcp

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  batch_generate_us.py  list_voices.py  mcp_server.py  oauth_login.py  pyproject.toml  requirements.txt  speak.py  test_sentence.txt  tts_profiles.example.json  tts_profiles.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
docs/: clients.md  mcp-contract.md
src/tts_mcp/: __init__.py  batch.py  list_voices.py  profiles.example.json  server.py  speak.py
src/tts_mcp/core/: __init__.py  auth.py  profile.py  synth.py
tests/: conftest.py  test_batch.py  test_batch_generate.py  test_list_voices_cli.py  test_mcp_server.py  test_server.py  test_server_cli.py  test_speak_cli.py
tests/core/: test_auth.py  test_profile.py  test_synth.py  test_usage.py  test_voices.py
tests/tts_core/: test_auth.py  test_profile.py  test_synth.py  test_usage.py  test_voices.py
tts_core/: auth.py  profile.py  synth.py  usage.py  voices.py
