[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "tts-mcp"
version = "0.1.0"
description = "Profile-driven MCP server for Google Cloud Text-to-Speech"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lucas Braga" },
]
keywords = ["mcp", "tts", "text-to-speech", "google-cloud", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "google-cloud-texttospeech >= 2.27.0",
    "fastmcp >= 2.0, < 3",
]

[project.urls]
Homepage = "https://github.com/that-lucas/tts-mcp"
Repository = "https://github.com/that-lucas/tts-mcp"
Issues = "https://github.com/that-lucas/tts-mcp/issues"

[project.scripts]
tts-mcp   = "mcp_server:main"
tts-speak  = "speak:main"
tts-voices = "list_voices:main"
tts-batch  = "batch_generate_us:main"


[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "pytest-cov >= 5.0",
    "ruff >= 0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["tts_core"]

[tool.hatch.build.targets.wheel.force-include]
"mcp_server.py" = "mcp_server.py"
"speak.py" = "speak.py"
"list_voices.py" = "list_voices.py"
"batch_generate_us.py" = "batch_generate_us.py"


# -- Ruff --

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade (modernize for 3.11+)
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    "PT",   # flake8-pytest-style
    "S",    # flake8-bandit (security)
    "BLE",  # flake8-blind-except
    "T20",  # flake8-print
]
ignore = [
    "T201",  # allow print() in CLI scripts
    "S603",  # subprocess with shell=False — intentional
    "S607",  # partial executable path — intentional (afplay, pgrep)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S108"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -- Pytest --

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "--tb=short", "-q"]

# -- Coverage --

[tool.coverage.run]
source = ["tts_core", "mcp_server"]

[tool.coverage.report]
fail_under = 80
show_missing = true
